--- a/scripts/heating.yaml
+++ b/scripts/heating.yaml
@@ -155,19 +155,14 @@ boost_heating:
   sequence:
     - condition: template
       value_template: "{{ state_attr(zone, 'temperature') <= 21 }}"
-    - service: input_datetime.set_datetime
-      target:
-        entity_id: "{{ boost_expiry }}"
-      data:
-        datetime: "{{ now() + timedelta(minutes=2) }}"
-    - condition: template
-      value_template: "{{ state_attr('input_datetime.bedroom_boost_expiry' , 'timestamp') > now().timestamp() }}"
     - service: script.increase_temperature
       data:
         entity_id: "{{ zone }}"
         temperature: "{{ state_attr(zone, 'temperature') + 1 }}"
-    # - delay: '00:30:00'
-    - wait_template: "{{ state_attr('input_datetime.bedroom_boost_expiry' , 'timestamp') < now().timestamp() }}"
+    - delay: '00:30:00'
+    - condition: state
+      entity_id: "{{ zone }}"
+      state: heat
     - service: script.set_thermostat
       data:
         entity_id: "{{ zone }}"
