--- a/scripts/heating.yaml
+++ b/scripts/heating.yaml
@@ -60,7 +60,7 @@ heating_work:
     - service: script.set_thermostat
       data:
         entity_id: climate.office
-        temperature: 19.5
+        temperature: "{{ states('input_number.default_office_temperature') }}"
     - service: climate.turn_off
       entity_id:
           - climate.bedroom
@@ -85,7 +85,7 @@ heating_away:
     - service: climate.set_temperature
       data_template:
         entity_id: climate.living_room
-        temperature: 16
+        temperature: "{{ states('input_number.default_away_temperature') }}"
 
 heating_close:
   sequence:
@@ -129,7 +129,7 @@ heating_night:
     - service: script.set_thermostat
       data:
         entity_id: climate.living_room
-        temperature: 16
+        temperature: "{{ states('input_number.default_away_temperature') }}"
     - service: script.set_thermostat
       data:
         entity_id: climate.bedroom
@@ -155,7 +155,7 @@ refresh_early_morning_timer:
       data:
         time: >
           {% set temp = states('sensor.living_room_temperature') %}  
-          {% set target = 20 %}
+          {% set target = states('input_number.default_living_room_temperature') %}
           {% set speed = 30 %}
           {{ (((state_attr('input_datetime.morning' , 'timestamp')) - ((target - float(temp)) * speed * 60))|timestamp_custom('%H:%M', false)) }}
 
