--- a/scripts/scripts.yaml
+++ b/scripts/scripts.yaml
@@ -2,11 +2,11 @@ leave_home:
   sequence:
     - service: vacuum.set_fan_speed
       data:
-        entity_id: vacuum.rockrobo_vacuum_v1
+        entity_id: vacuum.downstairs_vacuum
         fan_speed: Standard
     - service: vacuum.start
       data:
-        entity_id: vacuum.rockrobo_vacuum_v1
+        entity_id: vacuum.downstairs_vacuum
     - service: script.all_rooms_off
 
 back_home:
@@ -16,11 +16,11 @@ back_home:
         - automation.heating_on_every_morning
     - service: vacuum.set_fan_speed
       data:
-        entity_id: vacuum.rockrobo_vacuum_v1
+        entity_id: vacuum.downstairs_vacuum
         fan_speed: Standard
     - service: vacuum.return_to_base
       entity_id:
-        - vacuum.rockrobo_vacuum_v1
+        - vacuum.downstairs_vacuum
 
 morning:
   sequence:
@@ -79,11 +79,11 @@ start_work:
     - service: script.heating_work
     - service: vacuum.set_fan_speed
       data:
-        entity_id: vacuum.rockrobo_vacuum_v1
+        entity_id: vacuum.downstairs_vacuum
         fan_speed: Standard
     - service: vacuum.start
       data:
-        entity_id: vacuum.rockrobo_vacuum_v1
+        entity_id: vacuum.downstairs_vacuum
     - service: script.downstairs_off
 
 finish_work:
@@ -103,7 +103,7 @@ vacuum_kitchen:
   sequence:
     - service: vacuum.send_command
       data:
-        entity_id: vacuum.rockrobo_vacuum_v1
+        entity_id: vacuum.downstairs_vacuum
         command: app_zoned_clean
         params: [[22390,19943,24740,23143,1]]
 
@@ -111,7 +111,7 @@ vacuum_litter:
   sequence:
     - service: vacuum.send_command
       data:
-        entity_id: vacuum.rockrobo_vacuum_v1
+        entity_id: vacuum.downstairs_vacuum
         command: app_zoned_clean
         params: [[27217,20096,28417,22196,1]]
 
