--- a/integrations/homeassistant.yaml
+++ b/integrations/homeassistant.yaml
@@ -4,6 +4,9 @@ customize:
     entity_picture: /local/lubos.png
   person.jana:
     entity_picture: /local/janca.png
+  camera.baby_monitor:
+    video_attribute: 1
+    keep_streaming: true
 
 customize_domain:
   climate:
