--- a/scripts/rooms.yaml
+++ b/scripts/rooms.yaml
@@ -38,7 +38,7 @@ hallway_off:
 kids_room_off:
   sequence:
     - service: light.turn_off
-      entity_id: light.light.kid_s_room_light
+      entity_id: light.kid_s_room_light
     - service: media_player.turn_off
       entity_id: media_player.kids_room_speaker
     - service: fan.turn_off
