--- a/automations/lights.yaml
+++ b/automations/lights.yaml
@@ -139,7 +139,7 @@
     - service_template: >
         {% if is_state("light.kid_s_room_light", "off") and is_state("input_boolean.kids_night_light", "off") %}script.home_light
         {% elif is_state("light.kid_s_room_light", "off") and is_state("input_boolean.kids_night_light", "on") %}script.night_light
-        {% else %}light.turn_off
+        {% else %}script.kids_room_light_off
         {% endif %}
       entity_id: light.kid_s_room_light
 
