--- a/scripts/lights.yaml
+++ b/scripts/lights.yaml
@@ -51,6 +51,14 @@ bright_light:
         color_temp: 175
         brightness: 255
 
+kids_room_light_off:
+  sequence:
+    - service: light.turn_off
+      entity_id: light.kids_room_lamp
+    - delay: '00:00:30'
+    - service: light.turn_off
+      entity_id: light.kids_room_light
+
 default_light_colors:
   sequence:
     - service: script.home_light
