--- a/automations/automations.yaml
+++ b/automations/automations.yaml
@@ -157,15 +157,15 @@
   action:
     - service: script.kids_bedtime
 
-- alias: Home - Disable night lights every morning
-  trigger:
-    platform: time
-    at: "06:00:00"
-  action:
-    - service: input_boolean.turn_off
-      entity_id:
-        - input_boolean.night_mode
-        - input_boolean.kids_night_light
+# - alias: Home - Disable night lights every morning
+#   trigger:
+#     platform: time
+#     at: "06:00:00"
+#   action:
+#     - service: input_boolean.turn_off
+#       entity_id:
+#         - input_boolean.night_mode
+#         - input_boolean.kids_night_light
 
 - alias: Stop music when xbox starts playing
   trigger:
