--- a/integrations/homeassistant.yaml
+++ b/integrations/homeassistant.yaml
@@ -4,6 +4,10 @@ customize:
     entity_picture: /local/lubos.png
   person.jana:
     entity_picture: /local/janca.png
+  camera.chuangmi_ipc019_b41b_motion_event:
+    keep_streaming: true
+  camera.chuangmi_ipc019_b41b_camera_control:
+    keep_streaming: true
 
 customize_domain:
   climate:
