--- a/scripts/rooms.yaml
+++ b/scripts/rooms.yaml
@@ -15,11 +15,11 @@ downstairs_off:
         - light.living_room_light
         - light.dining_room_light
         - light.kitchen_lightstrip
+        - light.tv_lamp
     - service: switch.turn_off
       entity_id:
         - switch.kitchen_light
         - switch.hallway_light
-        - switch.big_fan
         - switch.christmas_tree
     - service: script.turn_xbox_off
     - service: script.turn_tv_off
