Move kids room heating back to scheduler

--- a/scripts/heating.yaml
+++ b/scripts/heating.yaml
@@ -70,7 +70,6 @@ heating_away:
           - climate.bedroom
           - climate.office
           - climate.loft
-          - climate.kids_room
     - service: switch.turn_off
       entity_id: switch.schedule_kids_room_heating
     - condition: state
@@ -102,6 +101,8 @@ heating_back:
       data:
         entity_id: climate.kitchen
         temperature: "{{ states('input_number.default_kitchen_temperature') }}"
+    - service: switch.turn_on
+      entity_id: switch.schedule_kids_room_heating
 
 heating_bedrooms:
   sequence:
