--- a/automations/heating.yaml
+++ b/automations/heating.yaml
@@ -71,43 +71,43 @@
   action:
     - service: script.heating_bedrooms
 
-- alias: Heating - Kids Room
-  trigger:
-    platform: time
-    at:
-      - "07:00:00"
-      - "10:00:00"
-      - "19:00:00"
-  condition:
-    - condition: state
-      entity_id: group.everyone
-      state: home
-  action:
-    - if:
-        - condition: time
-          after: "07:00:00"
-          before: "10:00:00"
-      then:
-        - service: climate.turn_off
-          entity_id: climate.kids_room
-    - if:
-        - condition: time
-          after: "10:00:00"
-          before: "19:00:00"
-      then:
-        - service: climate.set_temperature
-          entity_id: climate.kids_room
-          data:
-            temperature: 20
-    - if:
-        - condition: time
-          after: "19:00:00"
-          before: "07:00:00"
-      then:
-        - service: climate.set_temperature
-          entity_id: climate.kids_room
-          data:
-            temperature: 19
+# - alias: Heating - Kids Room
+#   trigger:
+#     platform: time
+#     at:
+#       - "07:00:00"
+#       - "10:00:00"
+#       - "19:00:00"
+#   condition:
+#     - condition: state
+#       entity_id: group.everyone
+#       state: home
+#   action:
+#     - if:
+#         - condition: time
+#           after: "07:00:00"
+#           before: "10:00:00"
+#       then:
+#         - service: climate.turn_off
+#           entity_id: climate.kids_room
+#     - if:
+#         - condition: time
+#           after: "10:00:00"
+#           before: "19:00:00"
+#       then:
+#         - service: climate.set_temperature
+#           entity_id: climate.kids_room
+#           data:
+#             temperature: 20
+#     - if:
+#         - condition: time
+#           after: "19:00:00"
+#           before: "07:00:00"
+#       then:
+#         - service: climate.set_temperature
+#           entity_id: climate.kids_room
+#           data:
+#             temperature: 19
 
 - alias: Heating - Preheating On
   trigger:
