--- a/integrations/input_boolean.yaml
+++ b/integrations/input_boolean.yaml
@@ -2,9 +2,9 @@ heating:
   name: Heating
   icon: mdi:fire
 
-preheating:
-  name: Early start
-  icon: mdi:timer-outline
+# preheating:
+#   name: Early start
+#   icon: mdi:timer-outline
 
 night_mode:
   name: Night mode
