--- a/integrations/input_datetime.yaml
+++ b/integrations/input_datetime.yaml
@@ -1,14 +1,14 @@
-heating_on:
-  name: Heating on
-  has_date: false
-  has_time: true
+# heating_on:
+#   name: Heating on
+#   has_date: false
+#   has_time: true
 
-morning:
-  name: Morning
-  has_date: false
-  has_time: true
+# morning:
+#   name: Morning
+#   has_date: false
+#   has_time: true
 
-heating_off:
-  name: Heating off
-  has_date: false
-  has_time: true
+# heating_off:
+#   name: Heating off
+#   has_date: false
+#   has_time: true
