--- a/scripts/scripts.yaml
+++ b/scripts/scripts.yaml
@@ -43,12 +43,9 @@ morning:
 bedtime:
   sequence:
     - service: scheduler.run_action
-      entity_id:
-          - switch.schedule_living_room_heating
-          - switch.schedule_kids_room_heating
-          - switch.schedule_bedroom_heating
-          - switch.schedule_kitchen_heating
-      time: 00:00:00
+      data:
+        entity_id: switch.schedule_living_room_heating
+        time: 00:00:00
     - service: input_boolean.turn_on
       entity_id: input_boolean.night_mode
     - service: script.sunset_bedroom
