--- a/integrations/binary_sensor.yaml
+++ b/integrations/binary_sensor.yaml
@@ -10,3 +10,13 @@
 #     - "2021-10-13"
 #     - "2021-10-14"
 #     - "2021-10-15"
+
+- platform: template
+  sensors:
+    office_occupation:
+      value_template: >
+        {{
+            is_state('light.office_lamp', 'on')
+            or is_state('binary_sensor.in_meeting', 'on')
+            or is_state('binary_sensor.in_meeting', 'off')
+        }}
