--- a/automations/heating.yaml
+++ b/automations/heating.yaml
@@ -33,7 +33,7 @@
       to: 'on'
   action:
     - service: switch.turn_on
-      entity_id: switch.schedule_living_room_heating
+      entity_id: switch.switch.schedule_office_heating
 
 - alias: Heating - Office Unoccupied
   trigger:
@@ -42,7 +42,7 @@
       to: 'off'
   action:
     - service: switch.turn_off
-      entity_id: switch.schedule_living_room_heating
+      entity_id: switch.switch.schedule_office_heating
 
 # - alias: Heating - Morning
 #   trigger:
