--- a/scripts/rooms.yaml
+++ b/scripts/rooms.yaml
@@ -63,8 +63,12 @@ office_off:
       entity_id:
         - media_player.frontier_silicon_speaker
         - media_player.office_speaker
+    - service: climate.turn_off
+      entity_id: climate.office
     - service: switch.turn_off
-      entity_id: switch.office_fan
+      entity_id:
+        - switch.schedule_office_heating
+        - switch.office_fan
 
 loft_off:
   sequence:
