--- a/automations/lights.yaml
+++ b/automations/lights.yaml
@@ -41,6 +41,39 @@
     service: switch.turn_off
     entity_id: switch.hallway_light
 
+- alias: Light - Motion in staircase
+  trigger:
+    platform: state
+    entity_id: group.staircase_motion
+    from: 'off'
+    to: 'on'
+  condition:
+    - condition: state
+      entity_id: sun.sun
+      state: 'below_horizon'
+  action:
+    - service_template: >
+        {% if is_state("input_boolean.kids_night_light", "off") %}script.home_light
+        {% elif is_state("input_boolean.kids_night_light", "on") %}script.night_light
+        {% endif %}
+      data:
+        entity_id:
+          - light.upstairs_hall_light
+          - light.downstairs_hall_light
+
+- alias: Light - No motion in staircase
+  trigger:
+    platform: state
+    entity_id: group.staircase_motion
+    to: 'off'
+    for: '00:01:00'
+  action:
+    - service: light.turn_off
+      data:
+        entity_id:
+          - light.upstairs_hall_light
+          - light.downstairs_hall_light
+
 - alias: Light - Motion in toilet
   trigger:
     platform: state
