--- a/integrations/binary_sensor.yaml
+++ b/integrations/binary_sensor.yaml
@@ -20,3 +20,9 @@
             or is_state('binary_sensor.in_meeting', 'on')
             or is_state('binary_sensor.in_meeting', 'off')
         }}
+    dark_outside:
+      value_template: >
+        {{
+            is_state('sun.sun', 'below_horizon')
+            or states.sensor.openweathermap_cloud_coverage.state | int > 95
+        }}
