--- a/integrations/binary_sensor.yaml
+++ b/integrations/binary_sensor.yaml
@@ -24,5 +24,5 @@
       value_template: >
         {{
             state_attr("sun.sun", "elevation") < 0
-            or states(sensor.openweathermap_cloud_coverage) | int > 95
+            or states('sensor.openweathermap_cloud_coverage') | int > 95
         }}
