--- a/automations/lights.yaml
+++ b/automations/lights.yaml
@@ -1,21 +1,21 @@
-- alias: Light - Gateway light on
-  trigger:
-    platform: numeric_state
-    entity_id: sensor.xiaomi_gateway_illuminance
-    below: 450
-  action:
-    - service: script.home_light
-      data:
-        entity_id: light.xiaomi_gateway_light
+# - alias: Light - Gateway light on
+#   trigger:
+#     platform: numeric_state
+#     entity_id: sensor.xiaomi_gateway_illuminance
+#     below: 450
+#   action:
+#     - service: script.home_light
+#       data:
+#         entity_id: light.xiaomi_gateway_light
 
-- alias: Light - Gateway light off
-  trigger:
-    platform: numeric_state
-    entity_id: sensor.xiaomi_gateway_illuminance
-    above: 600
-  action:
-    service: light.turn_off
-    entity_id: light.xiaomi_gateway_light
+# - alias: Light - Gateway light off
+#   trigger:
+#     platform: numeric_state
+#     entity_id: sensor.xiaomi_gateway_illuminance
+#     above: 600
+#   action:
+#     service: light.turn_off
+#     entity_id: light.xiaomi_gateway_light
 
 - alias: Light - Motion in hallway
   trigger:
@@ -167,7 +167,7 @@
         entity_id:
           - light.dining_room_light
           - light.living_room_lamp
-          - light.upstairs_hall_light
+          - light.tv_lamp
 
 - alias: Light - Toggle Office using Cube
   trigger:
